--- a/project/package.json
+++ b/project/package.json
@@ -14,12 +14,19 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.7",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
-    "react-pro-sidebar": "^1.1.0"
+    "react-pro-sidebar": "^1.1.0",
+    "react-redux": "^9.1.2",
+    "sweetalert2": "^11.13.2"
   },
   "devDependencies": {
     "@types/node": "^20",
