--- a/project/package.json
+++ b/project/package.json
@@ -21,14 +21,16 @@
     "@mui/material": "^6.0.2",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
+    "crypto-js": "^4.2.0",
     "next": "14.2.8",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.1.2",
     "sweetalert2": "^11.13.2"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
