--- a/project/package.json
+++ b/project/package.json
@@ -22,6 +22,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
+    "firebase": "^10.13.1",
     "next": "14.2.8",
     "react": "^18.3.1",
     "react-dom": "^18",
