--- a/project/package.json
+++ b/project/package.json
@@ -26,6 +26,8 @@
     "next": "14.2.8",
     "react": "^18.3.1",
     "react-dom": "^18",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^5.3.0",
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.1.2",
     "sweetalert2": "^11.13.2"
@@ -35,6 +37,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-helmet": "^6.1.11",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
