--- a/project/package.json
+++ b/project/package.json
@@ -30,7 +30,8 @@
     "react-icons": "^5.3.0",
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.1.2",
-    "sweetalert2": "^11.13.2"
+    "sweetalert2": "^11.14.0",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
